# apiV2

./: .gitignore  go.mod
app/: .env  Cargo.toml  Dockerfile  docker-compose.yml  main.go  setup.sql
app/src/: main.rs
models/: mykayak.go
utils/: scraper.go
